# main-agent-app

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/utils/: groq_client.py  pdf_loader.py
